# nifcloud-cli

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: lint.yml  publish-to-docker.yml  publish-to-release.yml  test-build-msi.yml  test.yml
docs/source/: bootstrapdocs.py  conf.py  htmlgen  index.rst
nifcloudcli/: __main__.py  clidriver.py  constants.py  link.py
nifcloudcli/customizations/: commands.py  waiters.py
nifcloudcli/customizations/configure/: addmodel.py  configure.py  get.py  list.py  set.py
nifcloudcli/data/: cli.json  endpoints.json
nifcloudcli/data/ess/2010-12-01N2014-05-28/: service-2.json
tests/integration/: helper.py  test_cli.py  test_computing.py  test_devops.py  test_devops_runner.py  test_dns.py  test_ess.py  test_nas.py  test_rdb.py  test_service_activity.py  test_storage.py
tests/unit/: test_link.py
