[build-system]
requires = ["setuptools"]

[project]
name = "nifcloud-cli"
authors = [{name = "Fujitsu"}]
urls = {Homepage = "https://github.com/nifcloud/nifcloud-cli"}
dynamic = ["version"]
description = "NIFCLOUD Command-Line Tools"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = {text = "Apache-2.0"}
dependencies = [
    "awscli==1.38.10",
    "nifcloud==1.16.0",
    "pyyaml==5.3.1",
]
requires-python = ">=3.8"

[dependency-groups]
dev = [
    "isort",
    "flake8",
    "cx-freeze==7.2.10",
    "sphinx==5.1.1 ; sys_platform != 'win32'",
    "sphinx-rtd-theme ; sys_platform != 'win32'",
    "pytest",
    "pytest-cov",
]

[tool.uv]
package = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
nifcloud-cli = { path = ".", editable = true }
