[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
name = nifcloud-cli
version = attr: nifcloudcli.__version__
description = NIFCLOUD Command-Line Tools
long_description = file: README.md
author = FUJITSU CLOUD TECHNOLOGIES
url = https://github.com/nifcloud/nifcloud-cli
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
  bin/nifcloud
install_requires =
  awscli==1.16.144
  nifcloud==0.14.0
